--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
             <div class="center">Framework Tip Calculator</div>
         </ons-toolbar>
         <section style="padding: 8px;">
-         <div style="margin-bottom: 20px;"><input class="text-input text-input--material" placeholder="Bill Amount" type="text" style="width:100%" required></div>
-         <div style="margin-bottom: 20px;">  <ons-range style="width: 80%;" value="0" min="0" max="50" step=".5" id="tipRange"></ons-range>
-           <output id="percentOut"></output>
+         <div style="margin-bottom: 20px;"><input class="text-input text-input--material" placeholder="Bill Amount" type="text" style="width:100%" required id="billAmount"></div>
+         <div style="margin-bottom: 20px;">  <ons-range style="width: 80%;" value="18" min="0" max="50" step=".5" id="tipRange"></ons-range>
+           <output id="percentOut">18%</output>
          </div>
-         <div> <ons-button modifier="large">Calculate Tip</ons-button></div>
+         <div> <ons-button modifier="large" id="btnCalculate">Calculate Tip</ons-button></div>
          </section>
+         <section style="padding: 8px;">
+            <output id="result"></output>
+        </section>
       </ons-page>
   <script src="tip.js"></script>
   </body>
