Calculate tip dynamically

--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Tip Calculator</title>
     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
     <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
 
-  </head>
-  <body>
-      <ons-page>
+</head>
+<body>
+    <ons-page>
         <ons-toolbar>
             <div class="center">Framework Tip Calculator</div>
         </ons-toolbar>
         <section style="padding: 8px;">
-         <div style="margin-bottom: 20px;"><input class="text-input text-input--material" placeholder="Bill Amount" type="text" style="width:100%" required id="billAmount"></div>
-         <div style="margin-bottom: 20px;">  <ons-range style="width: 75%;" value="18" min="0" max="50" step=".5" id="tipRange"></ons-range>
-           <output id="percentOut">18%</output>
-         </div>
-         <div> <ons-button modifier="large" id="btnCalculate">Calculate Tip</ons-button></div>
-         </section>
-         <section style="padding: 8px;">
+            <div style="margin-bottom: 20px;"><input class="text-input text-input--material" placeholder="Bill Amount" type="text" style="width:100%" required id="billAmount"></div>
+            <div style="margin-bottom: 20px;">  <ons-range style="width: 75%;" value="18" min="0" max="50" step=".5" id="tipRange"></ons-range>
+                <output id="percentOut">18%</output>
+            </div>
+            <div id="errorMessage"></div>
+        </section>
+        <section style="padding: 8px;">
             <output id="result"></output>
         </section>
-      </ons-page>
-  <script src="tip.js"></script>
-  </body>
+    </ons-page>
+    <script src="tip.js"></script>
+</body>
 </html>
